<resources>
    <string name="app_name">Module 201 - Lecture</string>
    <string name="select_the_app_you_want_to_work_with">Select the app you want to work with</string>
    <string name="money_app">Money App</string>
    <string name="name">name</string>
    <string name="NAME"> NAME</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="username_cannot_be_empty" />
    <string name="forgot_password">forgot password?</string>
    <string name="brand_app">Brand App</string>
    <string name="exchange_logo">exchange_logo</string>
    <string name="x_changer">X-Changer</string>
    <string name="find_the_best_cash_exchange_rates">Find the best cash exchange rates</string>
    <string name="button_continue">Continue</string>
    <string name="we_accept_all_major_currencies">We accept all major currencies</string>
    <string name="get_started">Get Started</string>
    <string name="swedish_krona">Swedish Krona</string>
    <string name="enter_amount">Enter amount</string>
    <string name="_0_00">0.00</string>
    <string name="euro">Euro</string>
    <string name="us_dollar">US Dollar</string>
</resources>