<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".IndexActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/select_the_app_you_want_to_work_with"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonMoneyApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/money_app" />

    <Button
        android:id="@+id/buttonBrandApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brand_app" />

</LinearLayout>